<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#afc936" >

        <com.jezire.widget.IconView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <com.jezire.widget.UyghurTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/AppAbout"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </com.jezire.widget.UyghurTextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#96b40b" >
        </View>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/aboutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cfcfcf"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="#fff"
            android:orientation="vertical" >

            <!-- ئۈستى -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@null"
                android:gravity="center|center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" >
                </ImageView>

                <com.jezire.widget.UyghurTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center"
                    android:layout_marginTop="10dp"
                    android:gravity="center|center"
                    android:text="@string/Jezire"
                    android:textColor="#666666"
                    android:textSize="12sp" >
                </com.jezire.widget.UyghurTextView>

                <com.jezire.widget.UyghurTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center"
                    android:gravity="center|center"
                    android:text="@string/CurrentVersion"
                    android:textColor="#999999"
                    android:textSize="12sp" >
                </com.jezire.widget.UyghurTextView>
            </LinearLayout>

            <!-- ئاستى -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:background="@null"
                android:orientation="vertical" >

                <com.jezire.widget.UyghurTextView
                    android:id="@+id/KilishimButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:background="#afc936"
                    android:gravity="center|center"
                    android:text="@string/qollanchi_kilishimi"
                    android:textColor="#ffffff"
                    android:textSize="18sp" >
                </com.jezire.widget.UyghurTextView>

                <com.jezire.widget.UyghurTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center|center"
                    android:text="@string/jezire_ulinish_tor_bekiti"
                    android:textColor="#666666"
                    android:textSize="12sp" >
                </com.jezire.widget.UyghurTextView>

                <com.jezire.widget.UyghurTextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center|center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center|center"
                    android:text="@string/copyright"
                    android:textColor="#999999"
                    android:textSize="12sp" >
                </com.jezire.widget.UyghurTextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>