<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_loading_big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFailure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_browser" />

        <com.jezire.widget.UyghurTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center|center"
            android:text="@string/network_failure"
            android:textColor="#777777"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/btnRetry"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f26c4f"
            android:gravity="center|center"
            android:orientation="horizontal" >

            <com.jezire.widget.UyghurTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center"
                android:text="@string/retry"
                android:textColor="#fefefe"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <com.jezire.xlistview.XListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:overScrollMode="never"
        android:scrollbarStyle="insideOverlay"
        android:visibility="gone" />

</LinearLayout>