<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcfcf"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#605ca8" >

        <com.jezire.widget.IconView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <com.jezire.widget.UyghurTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </com.jezire.widget.UyghurTextView>

        <com.jezire.widget.IconView
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#555199" >
        </View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_loading_big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFailure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_browser" />

        <com.jezire.widget.UyghurTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center|center"
            android:text="@string/network_failure"
            android:textColor="#777777"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/btnRetry"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f26c4f"
            android:gravity="center|center"
            android:orientation="horizontal" >

            <com.jezire.widget.UyghurTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center"
                android:text="@string/retry"
                android:textColor="#fefefe"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:visibility="invisible" >
    </WebView>

</LinearLayout>