<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcfcf"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0891f2" >

        <com.jezire.widget.IconView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <com.jezire.widget.UyghurTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </com.jezire.widget.UyghurTextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#0784dd" >
        </View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_loading_big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFailure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_browser" />

        <com.jezire.widget.UyghurTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center|center"
            android:text="@string/network_failure"
            android:textColor="#777777"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/btnRetry"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f26c4f"
            android:gravity="center|center"
            android:orientation="horizontal" >

            <com.jezire.widget.UyghurTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center"
                android:text="@string/retry"
                android:textColor="#fefefe"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center|center"
                android:orientation="vertical" >

                <com.jezire.widget.IconView
                    android:id="@+id/btnTabControl"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center|center"
                    android:paddingLeft="7dp"
                    android:textColor="#949494"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/lineView"
                    android:layout_width="48dp"
                    android:layout_height="3dp"
                    android:background="#bebebe" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/tabNewsCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#dfdfdf"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center"
            android:overScrollMode="never" />
    </LinearLayout>

</LinearLayout>