<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcfcf"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#afc936" >

        <com.jezire.widget.IconView
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <com.jezire.widget.UyghurTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="16sp" >
        </com.jezire.widget.UyghurTextView>

        <com.jezire.widget.IconView
            android:id="@+id/btnUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textColor="#ffffff"
            android:textSize="28sp" >
        </com.jezire.widget.IconView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#96b40b" >
        </View>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_loading_big" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFailure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:gravity="center|center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerInside"
            android:src="@drawable/icon_browser" />

        <com.jezire.widget.UyghurTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center|center"
            android:text="@string/network_failure"
            android:textColor="#777777"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/btnRetry"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f26c4f"
            android:gravity="center|center"
            android:orientation="horizontal" >

            <com.jezire.widget.UyghurTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center"
                android:text="@string/retry"
                android:textColor="#fefefe"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/imgAd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#ff8666"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="fitXY" >
                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/linkRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center|center"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center|center"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center|center"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>